# eqpfit

./: README.md  pyproject.toml
eqpfit/: __init__.py  binom.py  fit.py  model.py
tests/: test_eqpfit.py
