[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eqpfit"
version = "0.1.0"
description = "Exact and eventual quasi-polynomial (PORC) fitting for integer-valued sequences"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["eqpfit"]

[project.optional-dependencies]
flint = ["python-flint"]
